stockMsaStock/src/main/java/com/example/stockmsastock/common/error/ResponseCode.java
package com.example.stockmsastock.common.error;

public interface ResponseCode {
    String SUCCESS = "SU";
    String VALIDATION_FAIL = "VF";

    String CERTIFICATION_FAIL = "CF";
    String DATABASE_ERROR = "DBE";

    String INTERNAL_ERROR = "IE";
}
